5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2711.log
== TEST (2019-04-09 11:00:36) 
-- CODE:
cash=float(input());
quantidade=float(input());
vtickt=float(input());
qonibus=float(input());
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>=cash):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:46) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>=cash):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:58) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>=cash):
	print("SUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse<cash):
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:34) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>cash):
	print("SUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse=<cash):
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 9
    if(quantidade*vtickt+qonibus*vpasse=<cash):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:52) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>cash):
	print("SUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse=<cash):
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 9
    if(quantidade*vtickt+qonibus*vpasse=<cash):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:15) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>cash):
	print("SUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse<=cash):
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:04:37) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>cash):
	print("SUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse<=cash):
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.171765
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:05:30) 
-- CODE:
cash=float(input());
quantidade=int(input())
vtickt=float(input());
qonibus=int(input())
vpasse=float(input())

if(quantidade*vtickt+qonibus*vpasse>cash):
	print("INSUFICIENTE")
if(quantidade*vtickt+qonibus*vpasse<=cash):
	print("SUFICIENTE")
-- EXECUTION TIME:
0.158561
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
